--- a/.env.example
+++ b/.env.example
@@ -38,7 +38,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-GOOGLE_APPLICATION_NAME=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT=
+GOOGLE_APPLICATION_NAME=Check
+GOOGLE_CLIENT_ID=653646747092-29f4giefeffgvdp9bal4r9h0nrvq4vo0nsps.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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5k7qn
+GOOGLE_REDIRECT=http://localhost
